# pkg/api/find_user.go
@@ -10,18 +10,17 @@ import (
 	_ "github.com/lib/pq"
 )
 
-// @Summary     register
+// @Summary     find All
 // @Tags        user
 // @version     1.0
 // @produce     application/json
-// @param       register    body      models.Register true "register data"
-// @Success     200         {object}  models.Register
-// @Router      /api/v1/auth/register [post]
+// @Success     200         {object}  models.User
+// @Router      /api/v1/auth/find [get]
 func FindUser(c *gin.Context) {
 
     var user models.User
-	users := make(map[string]models.User)
 
+	users := make([]models.User, 0)
     // 查詢資料列：
     println("查詢資料列：")
     rows, err := db.DB.Query("SELECT * FROM users")
@@ -30,16 +29,15 @@ func FindUser(c *gin.Context) {
         panic(err)
     }
 
-   
-
     for rows.Next() {
-            err = rows.Scan(&user.Name, &user.Password, &user.Email)
-			println(&user)
-			users[user.Name] = user
+			var uid *int
+            err = rows.Scan(&uid, &user.Name, &user.Password, &user.Email)
+			println(*uid)
+			users = append(users, user)
 			if err != nil {
 				panic(err)
 			}
     }
-	//println(&users)
-    c.JSON(http.StatusCreated, &user)
+	//println(users)
+    c.JSON(http.StatusCreated, &users)
 }
